2000-08-21  KOIE Hidetaka <hide@koie.org>,
	TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* emacs/mhc-file.el (mhc-file-line-status-strings): New variable
	to customze status string.

2000-08-21  Yoshinari Nomura  <nom@quickhack.net>

	* mhc-make.rb (search_library): pass all args in a correct way.

	* emacs/mhc-guess.el (toplevel  mhc-guess-date-regexp-list):
	modify regexp.

	* ruby-ext/extconf.rb.in: add have_library('socket') for solaris.

2000-08-10  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc-wl.el (mhc-wl-summary-exit): Don't switch to original
	buffer if it is already appeared.

	* emacs/mhc.el (mhc-browse-x-url-function): New user option.
	(mhc-browse-x-url): New function.

	* emacs/mhc-xmas.el (mhc-xmas-icon-alist): Added "Link" entry.
	(mhc-icon-function-alist): Ditto.

	* emacs/mhc-draft.el (mhc-draft-finish): Removed meaningless comment.

	* emacs/mhc-bm.el (mhc-bm-icon-alist): Added "Link" entry.
	(mhc-icon-function-alist): Ditto.
	(mhc-put-icon): Put 'mouse-face overlay.

	* icons/Link.xbm, icons/Link.xpm: New file.

2000-08-08  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-mew.el (mhc-mew-eword-decode-string): Fix broken
	match-data.

2000-08-07  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-cmail.el (mhc-cmail-dummy-file): New variable.
	(Thanks to Mr. WATANABE Hirofumi)
	(mhc-cmail/schedule-foldermsg): Use mhc-cmail-dummy-file instead of
	'/dev/null'.
	(cmail-get-page-number-from-summary): Ditto.

	* emacs/mhc.el (mhc-mode-menu-spec): 'Sync' enable safer.

	* emacs/mhc-sync (toplevel): Add Date keyword.

	* emacs/mhc-calendar.el (mhc-calendar-input-exit): New function.
	(mhc-calendar-date-noduration): New variable.
	(mhc-draft-insert-calendar): mhc-calendar-date-noduration set t, if
	called in area of X-SC-Day:.
	(mhc-calendar/get-day-region): If mhc-calendar-date-noduration is t,
	insert days as break down.
	(mhc-calendar): Not autoload.
	(mhc-calendar-insert-summary-contents): Don't bind mhc-mailer-type.